@@ -442,6 +442,7 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
 * Show "skin does not exist error" only when the skin is inputted in the wrong
   case.
 * (bug 26164) Potential html injection when the database server isn't available
+* (bug 26160) Upload description set by extensions are not propagated
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent.
